--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
-    color: #000000;
+    font-weight: 400, 500, 700, 900;
 }
 .logotype {
     font-family: 'Raleway', sans-serif;
@@ -15,6 +15,9 @@ body {
 }
 .highlight {
     color: #2196F3;
+}
+ul {
+    list-style-type: none;
 }
 .link {
     text-decoration: none;
@@ -51,7 +54,7 @@ h1 {
     border-color: #000000;
     text-shadow: 0px, 4px, 4px, #000000;
 }
-button, .order {
+button> .order {
     background-color: #2196F3;
     width: 200px;
     height: 50px;
