--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ body {
 .highlight {
     color: #2196F3;
 }
+.footer .dark {
+    color: #FFFFFF;
+}
 ul {
     list-style-type: none;
 }
@@ -54,7 +57,7 @@ h1 {
     border-color: #000000;
     text-shadow: 0px, 4px, 4px, #000000;
 }
-button> .order {
+.order {
     background-color: #2196F3;
     width: 200px;
     height: 50px;
@@ -66,5 +69,76 @@ button> .order {
 }
 h1, .order {
     color: #FFFFFF;
+    text-align: center;
+}
+.contents h3 {
+    color: #212121;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16.41px;
+    letter-spacing: 3%;
+}
+.contents p{
+    color:#757575;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 3%;
+}
+h2 {
+    color:#212121;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42.19px;
+    letter-spacing: 3%;
+    text-align: center;
+}
+.team .name {
+    color: #212121;
+    font-style: medium;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18.75px;
+    letter-spacing: 3%;
+    text-align: center;
+}
+.team p {
+    color:#757575;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18.75px;
+    letter-spacing: 3%;
+    text-align: center;
+}
+.footer {
+    width: 1600px;
+    height: 252px;
+    top: 2097px;
+    background-color:#2F303A;
+}
+address {
+    color: #FFFFFF;
+    font-style: normal;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 3%;
+}
+address .link {
+    color: #FFFFFF99;
+}
+.filter [type="button"] {
+    background-color: #F5F4FA;
+    color: #212121;
+    width: 93px;
+    height: 38px;
+    top: 174px;
+    left: 639px;
+/* styl dla czcionki w przyciskach */
+    font-style: medium;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 3%;
     text-align: center;
 }
