--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,38 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 400, 500, 700, 900;
+    color:#212121;
+}
+:root {
+    --brand-color: #2196F3;
+    --detail-color: #757575;
+    --bright-color: #FFFFFF;
+    --body-color: #2F303A;
+    --detail-font: 14px;
+    --subject-font: 16px;
 }
 .logotype {
     font-family: 'Raleway', sans-serif;
     font-style: Bold;
     font-size: 26px;
-    line-height: 31px;
-    line-height: 100%;
-    text-align: left;
-    vertical-align: top;
+    line-height: 1.19;
     letter-spacing: 3%;
     color: #000000;
 }
+.logotype, .designation, .navigation, .category {
+    text-align: left;
+}
+.logotype, .navigation, h1, .designation, .category {
+    vertical-align: top;
+}
+h1, .order, h2, .team .name, .team p, .filter [type="button"] {
+    text-align: center;
+}
 .highlight {
-    color: #2196F3;
+    color: var(--brand-color);
 }
 .footer .dark {
-    color: #FFFFFF;
+    color: var(--bright-color);
 }
 ul {
     list-style-type: none;
@@ -26,119 +41,130 @@ ul {
     text-decoration: none;
 }
 .navigation {
-    color: #212121;
     font-style: medium;
     font-weight: 500;
-    font-size: 14px;
-    text-align: mixed;
-    line-height: 16.41px;
+    font-size: var(--detail-font);
+    line-height: 1.14;
     letter-spacing: 2%;
     text-shadow: 0px, 4px, 4px, #000000;
 }
 .link:hover,
 .link:focus {
-    color: #2196F3;
+    color: var(--brand-color);
 }
 .contact {
-    color: #757575;
+    color: var(--detail-color);
 }
 .head {
     width: 1600;
     height: 600;
     top: 80;
-    background-color: #2F303A;
+    background-color: var(--body-color);
 }
 h1 {
     font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
+    line-height: 1.36;
     letter-spacing: 6%;
-    vertical-align: top;
     border-color: #000000;
     text-shadow: 0px, 4px, 4px, #000000;
 }
-.order {
-    background-color: #2196F3;
+.head> .order,
+.head>.order:active {
+    background-color: var(--brand-color);
     width: 200px;
     height: 50px;
-    top: 430 px;
-    font-size: 16px;
+    top: 430px;
+    font-size: var(--subject-font);
     font-weight: 700;
-    line-height: 30px;
+    font-style: bold;
+    line-height: 1.875;
     letter-spacing: 6%;
+    border: none;
+    border-radius: 4px;
 }
 h1, .order {
-    color: #FFFFFF;
-    text-align: center;
-}
+    color: var(--bright-color);}
 .contents h3 {
-    color: #212121;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16.41px;
+    font-size: var(--detail-font);
+    line-height: 1.14;
     letter-spacing: 3%;
 }
 .contents p{
-    color:#757575;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
+    color: var(--detail-color);
+    font-size: var(--detail-font);
+    line-height: 1.71;
     letter-spacing: 3%;
 }
 h2 {
-    color:#212121;
-    font-weight: 700;
     font-size: 36px;
-    line-height: 42.19px;
+    line-height: 1.16;
     letter-spacing: 3%;
-    text-align: center;
 }
 .team .name {
-    color: #212121;
+    color:#212121;
     font-style: medium;
     font-weight: 500;
-    font-size: 16px;
-    line-height: 18.75px;
+    font-size: var(--subject-font);
+    line-height: 1.17;
     letter-spacing: 3%;
-    text-align: center;
 }
 .team p {
-    color:#757575;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 18.75px;
+    color: var(--detail-color);
+    font-size: var(--subject-font);
+    line-height: 1.17;
     letter-spacing: 3%;
-    text-align: center;
 }
 .footer {
     width: 1600px;
     height: 252px;
     top: 2097px;
-    background-color:#2F303A;
+    background-color: var(--body-color);
 }
 address {
-    color: #FFFFFF;
+    color: var(--bright-color);
     font-style: normal;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 24px;
+    font-size: var(--detail-font);
+    line-height: 1.71;
     letter-spacing: 3%;
 }
 address .link {
     color: #FFFFFF99;
 }
-.filter [type="button"] {
+.filter [type=button] {
     background-color: #F5F4FA;
-    color: #212121;
-    width: 93px;
-    height: 38px;
-    top: 174px;
-    left: 639px;
-/* styl dla czcionki w przyciskach */
+    font-family: Roboto;
     font-style: medium;
+    font-size: var(--subject-font);
     font-weight: 500;
-    font-size: 16px;
-    line-height: 26px;
+    border: none;
+    padding: 15px 32px;
+    cursor: pointer;
+    background: #F5F4FA;
+    border-radius: 4px;
+    line-height: 1.6;
+}
+[type=button]:hover,
+[type=button]:active {
+    background-color: var(--brand-color);
+    color: var(--bright-color);
+    background: var(--brand-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    cursor: pointer;
+}
+.designation {
+    color: #212121;
+    font-style: bold;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 6%;
+}
+.category {
+    color: var(--detail-color);
+    font-size: var(--subject-font);
+    line-height: 1.875;
     letter-spacing: 3%;
-    text-align: center;
 }
